# CMakeWidgetProjectWeb

./: .gitignore  README.md
CMakeWidgetProject/: CMakeLists.txt  CMakeWidgetProject-Doc.odt  CMakeWidgetProject-res.qrc  Info.plist.in  WinResources.rc.in  dlgAbout.cpp  dlgAbout.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
CMakeWidgetProject-Linux-Qt-5.15.0-gcc_64bit/CMakeWidgetProject-1.2.3.4/: CMakeWidgetProject
CMakeWidgetProject-macOS-Qt-5.15.0-clang_64bit/CMakeWidgetProject-1.2.3.4.app/Contents/: Info.plist
CMakeWidgetProject-macOS-Qt-5.15.0-clang_64bit/CMakeWidgetProject-1.2.3.4.app/Contents/Frameworks/QtTextToSpeech.framework/Versions/5/: QtTextToSpeech
CMakeWidgetProject-macOS-Qt-5.15.0-clang_64bit/CMakeWidgetProject-1.2.3.4.app/Contents/MacOS/: CMakeWidgetProject
CMakeWidgetProject-macOS-Qt-5.15.0-clang_64bit/CMakeWidgetProject-1.2.3.4.app/Contents/PlugIns/texttospeech/: libqtexttospeech_speechosx.dylib
CMakeWidgetProject/CMakeWidgetProject/: CMakeLists.txt
CMakeWidgetProject/icons/: CMakeWidgetProject.icns  Create-macOS-icns.sh
